Publish report does not mention review or share link

--- a/app/views/6/verification-report/publish-report.html
+++ b/app/views/6/verification-report/publish-report.html
@@ -69,8 +69,8 @@
           </span>
           <h1 class="govuk-heading-l">Are you sure you want to publish
             this report?</h1>
-          <p class="govuk-body">This will lock the report. You will not be able to make any changes once you have published a report.</p>
-          <p class="govuk-body">If a colleague still needs to review this report do not publish it. <br/><br/>You can share a link to this report with them.</p>
+          <p class="govuk-body">This will lock the report. You will not be able
+            to make any changes once you have published a report.</p>
           <div class="govuk-button-group">
             <button class="govuk-button" data-module="govuk-button">
               Publish and lock
