Add logic around proposal
can only propose electonic monitoring or both if:
- domestic abuse checks have no issues AND
- safeguarding checks have no issues AND
- informed consent is given

If these conditions are not met then we show an error screen with
guidance to change proposal or redo/fix checks

--- a/app/views/6/verification-report/common-data.html
+++ b/app/views/6/verification-report/common-data.html
@@ -95,13 +95,13 @@
                 abuse Police call-outs.</div>
               <div class="govuk-radios" data-module="govuk-radios">
                 <div class="govuk-radios__item">
-                  <input class="govuk-radios__input" id="domestic-abuse-check-result" name="domestic-abuse-check-result" type="radio" value="No issues" {{ checked("domestic-abuse-check-result", "No issues") }}>
+                  <input class="govuk-radios__input" id="domestic-abuse-check-result" name="domestic-abuse-check-result" type="radio" value="No domestic abuse issues" {{ checked("domestic-abuse-check-result", "No domestic abuse issues") }}>
                   <label class="govuk-label govuk-radios__label" for="domestic-abuse-check-result">
                     No domestic abuse issues
                   </label>
                 </div>
                 <div class="govuk-radios__item">
-                  <input class="govuk-radios__input" id="domestic-abuse-check-result-2" name="domestic-abuse-check-result" type="radio" value="Has issues" {{ checked("domestic-abuse-check-result", "Has issues") }}>
+                  <input class="govuk-radios__input" id="domestic-abuse-check-result-2" name="domestic-abuse-check-result" type="radio" value="Has domestic abuse issues" {{ checked("domestic-abuse-check-result", "Has domestic abuse issues") }}>
                   <label class="govuk-label govuk-radios__label" for="domestic-abuse-check-result-2">
                     Has domestic abuse issues
                   </label>
@@ -124,13 +124,13 @@
               </legend>
               <div class="govuk-radios" data-module="govuk-radios">
                 <div class="govuk-radios__item">
-                  <input class="govuk-radios__input" id="safeguarding-check-result" name="safeguarding-check-result" type="radio" value="No issues" {{ checked("safeguarding-check-result", "No issues") }}>
+                  <input class="govuk-radios__input" id="safeguarding-check-result" name="safeguarding-check-result" type="radio" value="No safeguarding issues" {{ checked("safeguarding-check-result", "No safeguarding issues") }}>
                   <label class="govuk-label govuk-radios__label" for="safeguarding-check-result">
                     No safeguarding issues
                   </label>
                 </div>
                 <div class="govuk-radios__item">
-                  <input class="govuk-radios__input" id="safeguarding-check-result-2" name="safeguarding-check-result" type="radio" value="Has issues" {{ checked("safeguarding-check-result", "Has issues") }}>
+                  <input class="govuk-radios__input" id="safeguarding-check-result-2" name="safeguarding-check-result" type="radio" value="Has safeguarding issues" {{ checked("safeguarding-check-result", "Has safeguarding issues") }}>
                   <label class="govuk-label govuk-radios__label" for="safeguarding-check-result-2">
                     Has safeguarding issues
                   </label>
