--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -5,5 +5,6 @@
 
 // Add extra styles here
 @import "components/app-navigation";
+@import "components/error-summary";
 @import "components/split-pane";
 @import "components/subnav";
