--- a/app/views/6/verification-report/electronic-monitoring-for-curfew.html
+++ b/app/views/6/verification-report/electronic-monitoring-for-curfew.html
@@ -77,7 +77,7 @@
                 <div class="govuk-radios" data-module="govuk-radios">
                   <div class="govuk-radios__item">
                     <input class="govuk-radios__input" id="informed-consent-electronic-monitoring" name="informed-consent-electronic-monitoring" type="radio" value="Yes, they have given informed consent" {{ checked("informed-consent-electronic-monitoring", "Yes, they have given informed consent") }}>
-                    <label class="govuk-label govuk-radios__label" for="where-do-you-live">
+                    <label class="govuk-label govuk-radios__label" for="informed-consent-electronic-monitoring">
                       Yes, they have given informed consent
                     </label>
                   </div>
