Add link to court store

--- a/app/views/6/verification-report/confirmation.html
+++ b/app/views/6/verification-report/confirmation.html
@@ -24,13 +24,13 @@
             <li>
               <p class="govuk-body">
                 <a href="https://prosecuting.cjscp.org.uk/" class="govuk-link" rel="noreferrer noopener" target="_blank">
-                Upload to Common Platform (opens in new tab)</a>
+                  Upload to Common Platform (opens in new tab)</a>
               </p>
             </li>
             <li>
               <p class="govuk-body">
-                <a href="#" class="govuk-link" rel="noreferrer noopener" target="_blank">
-                Upload to Court store NEED A URL LILLY HARRINGTON CAN HELP (opens in new tab)</a>
+                <a href="https://courtstore.justice.gov.uk/courtstore/login?returnUrl=%2Fdashboard" class="govuk-link" rel="noreferrer noopener" target="_blank">
+                  Upload to Court store (opens in new tab)</a>
               </p>
             </li>
           </ul>
