--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -6,5 +6,6 @@
 // Add extra styles here
 @import "components/app-navigation";
 @import "components/error-summary";
+@import "components/govuk-layout";
 @import "components/split-pane";
 @import "components/subnav";
