Added hint text to help people include dates and descriptions of offences

--- a/app/views/6/verification-report/offences.html
+++ b/app/views/6/verification-report/offences.html
@@ -76,6 +76,9 @@
                 List all offences this report relates to
               </label>
             </h2>
+            <div id="offences-hint" class="govuk-hint">
+              Include a description of the offences and the dates that they were committed.</div>
+            <div class="govuk-form-group">
             <textarea class="govuk-textarea" id="offences" name="offences" rows="5" aria-describedby="offences-hint">{{data['offences']}}</textarea>
           </div>
           <button class="govuk-button" data-module="govuk-button">
