Updated H1 to essential checks and added hint text to safeguarding to be clear it's about child welfare

--- a/app/views/6/verification-report/common-data.html
+++ b/app/views/6/verification-report/common-data.html
@@ -81,7 +81,7 @@
             Dylan Adam Armstrong CRN: E234516
           </span>
           <h1 class="govuk-heading-l">
-            Required information for any type of report
+            Essential information
           </h1>
           <div class="govuk-form-group">
             <fieldset class="govuk-fieldset">
@@ -92,24 +92,24 @@
               </legend>
               <div id="domestic-abuse-checks-hint" class="govuk-hint">You must
                 check for any previous domestic violence charges or domestic
-                abuse Police call-outs.</div>
+                abuse police callouts.</div>
               <div class="govuk-radios" data-module="govuk-radios">
                 <div class="govuk-radios__item">
                   <input class="govuk-radios__input" id="domestic-abuse-check-result" name="domestic-abuse-check-result" type="radio" value="No domestic abuse issues" {{ checked("domestic-abuse-check-result", "No domestic abuse issues") }}>
                   <label class="govuk-label govuk-radios__label" for="domestic-abuse-check-result">
-                    No domestic abuse issues
+                    No concerns about domestic abuse 
                   </label>
                 </div>
                 <div class="govuk-radios__item">
                   <input class="govuk-radios__input" id="domestic-abuse-check-result-2" name="domestic-abuse-check-result" type="radio" value="Has domestic abuse issues" {{ checked("domestic-abuse-check-result", "Has domestic abuse issues") }}>
                   <label class="govuk-label govuk-radios__label" for="domestic-abuse-check-result-2">
-                    Has domestic abuse issues
+                    Concerns about domestic abuse
                   </label>
                 </div>
                 <div class="govuk-radios__item">
                   <input class="govuk-radios__input" id="domestic-abuse-check-result-3" name="domestic-abuse-check-result" type="radio" value="Check pending" {{ checked("domestic-abuse-check-result", "Check pending") }}>
                   <label class="govuk-label govuk-radios__label" for="domestic-abuse-check-result-3">
-                    Check pending for domestic abuse
+                    Waiting for information to come back
                   </label>
                 </div>
               </div>
@@ -122,23 +122,24 @@
                   Safeguarding checks
                 </h2>
               </legend>
+              <div id="safeguarding-checks-hint" class="govuk-hint">Check with social services for any concerns about child safety.</div>
               <div class="govuk-radios" data-module="govuk-radios">
                 <div class="govuk-radios__item">
                   <input class="govuk-radios__input" id="safeguarding-check-result" name="safeguarding-check-result" type="radio" value="No safeguarding issues" {{ checked("safeguarding-check-result", "No safeguarding issues") }}>
                   <label class="govuk-label govuk-radios__label" for="safeguarding-check-result">
-                    No safeguarding issues
+                    No child safeguarding concerns
                   </label>
                 </div>
                 <div class="govuk-radios__item">
                   <input class="govuk-radios__input" id="safeguarding-check-result-2" name="safeguarding-check-result" type="radio" value="Has safeguarding issues" {{ checked("safeguarding-check-result", "Has safeguarding issues") }}>
                   <label class="govuk-label govuk-radios__label" for="safeguarding-check-result-2">
-                    Has safeguarding issues
+                    Cocners about child safeguarding
                   </label>
                 </div>
                 <div class="govuk-radios__item">
                   <input class="govuk-radios__input" id="safeguarding-check-result-3" name="safeguarding-check-result" type="radio" value="Check pending" {{ checked("safeguarding-check-result", "Check pending") }}>
                   <label class="govuk-label govuk-radios__label" for="safeguarding-check-result-3">
-                    Check pending for safeguarding
+                    Waiting for information to come back
                   </label>
                 </div>
               </div>
