Updated address hint text to be clear what we are asking for - all addresses they live at

--- a/app/views/6/verification-report/common-data.html
+++ b/app/views/6/verification-report/common-data.html
@@ -158,10 +158,9 @@
                 <h2 class="govuk-fieldset__heading">Addresses</h2>
               </legend>
               <div id="changedName-hint" class="govuk-hint">
-                These are all the addresses relevant to the defendant and any
-                interventions they are being considered for.
+                Record all addresses that the defendant lives at.
               </div>
-              <h3 class="govuk-heading-s">Current Address</h3>
+              <h3 class="govuk-heading-s">Current address</h3>
               <p class="govuk-body">
                 {{data['address-line-1']}}<br />
                   {% if (data['address-line-2']) %}
