Small change to dependant's hint text to say defendant instead of someone

--- a/app/views/6/verification-report/common-data.html
+++ b/app/views/6/verification-report/common-data.html
@@ -223,7 +223,7 @@
               Dependants
             </h2>
             <div id="dependant-caring-responsibilities-hint" class="govuk-hint">
-              Record and dependants and caring responsibilities that could impact someone's ability to do unpaid work or receive an electronic monitoring curfew.
+              Record any dependants and caring responsibilities that could impact the defendant's ability to do unpaid work or receive an electronic monitoring curfew.
             </div>
             <textarea class="govuk-textarea" id="dependant-caring-responsibilities" name="dependant-caring-responsibilities" rows="5" aria-describedby="dependant-caring-responsibilities-hint">{{data['dependant-caring-responsibilities']}}</textarea>
           </div>
