corrected typo on concerns

--- a/app/views/6/verification-report/common-data.html
+++ b/app/views/6/verification-report/common-data.html
@@ -133,7 +133,7 @@
                 <div class="govuk-radios__item">
                   <input class="govuk-radios__input" id="safeguarding-check-result-2" name="safeguarding-check-result" type="radio" value="Has safeguarding issues" {{ checked("safeguarding-check-result", "Has safeguarding issues") }}>
                   <label class="govuk-label govuk-radios__label" for="safeguarding-check-result-2">
-                    Cocners about child safeguarding
+                    Concerns about child safeguarding
                   </label>
                 </div>
                 <div class="govuk-radios__item">
