Supporting comments hint text clearer about what to include, things you have considered and disregarded for any reason and why

--- a/app/views/6/verification-report/unpaid-work.html
+++ b/app/views/6/verification-report/unpaid-work.html
@@ -70,7 +70,7 @@
             <h2 class="govuk-heading-m" for="verify-no-health-conditions">Health
                conditions</h2>
             <div id="verify-no-health-conditions-hint" class="govuk-hint">Record
-              any health conditions that may effect their ability to complete
+              any health conditions that may affect their ability to complete
               unpaid work.</div>
             <textarea class="govuk-textarea" id="verify-no-health-conditions" name="verify-no-health-conditions" rows="5" aria-describedby="verify-no-health-conditions-hint">{{data['verify-no-health-conditions']}}</textarea>
           </div>
@@ -99,9 +99,10 @@
               <label class="govuk-label govuk-label--m" for="more-detail">
                 Supporting comments</label>
             </h1>
-            <div id="more-detail-hint" class="govuk-hint">Include any
-              information here that supports your professional judgement. This
-              will not be shared in the final report.</div>
+            <div id="more-detail-hint" class="govuk-hint">Include
+              information here that supports your professional judgement. 
+              <br/>You should include anything of concern that you have considered and how it has affected your recommendation.
+              <br/>This will not be published in the final report but it will recorded.</div>
             <textarea class="govuk-textarea" id="supporting-information-unpaid-work" name="supporting-information-unpaid-work" rows="5" aria-describedby="more-detail-hint">{{data['supporting-information-unpaid-work']}}</textarea>
           </div>
           <button class="govuk-button" data-module="govuk-button">Save and
