--- a/app/views/6/verification-report/electronic-monitoring-for-curfew.html
+++ b/app/views/6/verification-report/electronic-monitoring-for-curfew.html
@@ -69,7 +69,8 @@
             <h2 class="govuk-heading-m" for="consent-electronic-monitoring-curfew">
               Informed consent to an electronic monitoring curfew</h2>
             <div id="health-conditions-hint" class="govuk-hint">It is a legal
-              requirement that the defendant and anyone staying at the address they will be curfewed to gives their informed consent to to electronic monitoring.</div>
+              requirement that the defendant gives their informed consent to an electronic monitoring curfew.
+            <br/><br/>If the main occupier of the address is not the defendant, they must also give their informed consent.</div>
             <div class="govuk-form-group">
               <fieldset class="govuk-fieldset">
                 <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
@@ -100,8 +101,8 @@
             <h2 class="govuk-heading-m" for="health-electronic-monitoring">
               Health conditions</h2>
             <div id="health-electronic-monitoring-hint" class="govuk-hint">
-              Record any health conditions that may effect their suitability to
-              receive an electronic monitoring curfew. <br/><br/>For example
+              Record any health conditions that may affect their suitability to
+              receive an electronic monitoring curfew. <br/><br/>For example,
               mental health conditions or substance misuse.</div>
             <textarea class="govuk-textarea" id="health-electronic-monitoring" name="health-electronic-monitoring" rows="5" aria-describedby="health-electronic-monitoring-hint">{{data['health-electronic-monitoring']}}</textarea>
           </div>
@@ -116,9 +117,10 @@
               <label class="govuk-label govuk-label--m" for="more-detail">
                 Supporting comments</label>
             </h1>
-            <div id="electronic-monitoring-supporting-hint" class="govuk-hint">Include any
-              information here that supports your professional judgement. This
-              will not be shared in the final report.</div>
+            <div id="electronic-monitoring-supporting-hint" class="govuk-hint">Include
+              information here that supports your professional judgement. 
+              <br/>You should include anything of concern that you have considered and how it has affected your recommendation.
+              <br/>This will not be published in the final report but it will recorded.</div>
             <textarea class="govuk-textarea" id="supporting-information-electronic-monitoring" name="supporting-information-electronic-monitoring" rows="5" aria-describedby="supporting-information-electronic-monitoring-hint">{{data['supporting-information-electronic-monitoring']}}</textarea>
           </div>
           <button class="govuk-button" data-module="govuk-button">
