Page name to recommendation from proposal

--- a/app/views/6/verification-report/recommendation.html
+++ b/app/views/6/verification-report/recommendation.html
@@ -1,6 +1,6 @@
 {% extends "layouts/main.html" %}
 
-{% set pageName="Proposal" %}
+{% set pageName="Recommendation" %}
 
 {% block content %}
   <div class="app-split-pane app-width-container">
