Updated page name to essential infomration from common data

--- a/app/views/6/verification-report/essential-information.html
+++ b/app/views/6/verification-report/essential-information.html
@@ -1,6 +1,6 @@
 {% extends "layouts/main.html" %}
 
-{% set pageName="Common data" %}
+{% set pageName="Essential information" %}
 
 {% block pageScripts %}
   <script type="text/javascript">
