Changed H1 to recommendation from proposal to match

--- a/app/views/6/verification-report/proposal-error.html
+++ b/app/views/6/verification-report/proposal-error.html
@@ -84,7 +84,7 @@
             Dylan Adam Armstrong CRN: E234516
           </span>
           <h1 class="govuk-heading-l">
-            Proposal
+            Recommendation
           </h1>
           <div class="govuk-form-group govuk-form-group--error">
             <h2 class="govuk-label-wrapper" id="proposal">
