--- a/app/views/6/verification-report/check-answers.html
+++ b/app/views/6/verification-report/check-answers.html
@@ -22,7 +22,7 @@
             </li>
             <li class="app-subnav__section-item">
               <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="essential information">
-                essential information</a>
+                Essential information</a>
             </li>
             <li class="app-subnav__section-item">
               {% if (data['verification-report-sections'] == 'unpaidWork') or (data['verification-report-sections'] == 'both')  %}
@@ -154,7 +154,29 @@
           </div>
           <div class="govuk-summary-card">
             <div class="govuk-summary-card__title-wrapper">
-              <h2 class="govuk-summary-card__title">Required sections</h2>
+              <h2 class="govuk-summary-card__title">Offences</h2>
+            </div>
+            <div class="govuk-summary-card__content">
+              <dl class="govuk-summary-list">
+                <div class="govuk-summary-list__row">
+                  <dt class="govuk-summary-list__key">
+                    Offences
+                  </dt>
+                  <dd class="govuk-summary-list__value">
+                    {{data['offences']}}
+                  </dd>
+                  <dd class="govuk-summary-list__actions">
+                    <a class="govuk-link" href="offences.html">Change
+                      <span class="govuk-visually-hidden">Offences</span>
+                    </a>
+                  </dd>
+                </div>
+              </dl>
+            </div>
+          </div>
+          <div class="govuk-summary-card">
+            <div class="govuk-summary-card__title-wrapper">
+              <h2 class="govuk-summary-card__title">Choose sections</h2>
             </div>
             <div class="govuk-summary-card__content">
               <dl class="govuk-summary-list">
@@ -177,7 +199,7 @@
           </div>
           <div class="govuk-summary-card">
             <div class="govuk-summary-card__title-wrapper">
-              <h2 class="govuk-summary-card__title">Common data</h2>
+              <h2 class="govuk-summary-card__title">Essential information</h2>
             </div>
             <div class="govuk-summary-card__content">
               <dl class="govuk-summary-list">
@@ -249,7 +271,7 @@
           </div>
           <div class="govuk-summary-card">
             <div class="govuk-summary-card__title-wrapper">
-              <h2 class="govuk-summary-card__title">Common data</h2>
+              <h2 class="govuk-summary-card__title">Essential information</h2>
             </div>
             <div class="govuk-summary-card__content">
               <dl class="govuk-summary-list">
