--- a/app/views/6/verification-report/confirmation.html
+++ b/app/views/6/verification-report/confirmation.html
@@ -1,13 +1,13 @@
 {% extends "layouts/main.html" %}
 
-{% set pageName="Verification report published" %}
+{% set pageName="Report published" %}
 
 {% block content %}
   <div class="app-split-pane app-width-container">
     <main id="main-content" class="app-content" role="main">
       <div class="govuk-panel govuk-panel--confirmation">
         <h1 class="govuk-panel__title">
-          Verification report published
+          Report published
         </h1>
         <div class="govuk-panel__body">
           Dylan Adam Armstrong<br/>
@@ -15,11 +15,11 @@
         </div>
       </div>
       <p class="govuk-body">The report is now locked and cannot be edited.</p>
+      <p class="govuk-body">It is published to NDelius.</p>
       <h2 class="govuk-heading-m">Next steps</h2>
       <ol class="govuk-list govuk-list--number govuk-!-margin-bottom-9">
         <li><a href="#" class="govuk-link">Download the report</a></li>
-        <li>Upload the report to the apropaite digital file store, to share it
-          with the court.
+        <li>Share the report with the court.
           <ul class="govuk-list govuk-list--bullet">
             <li>
               <p class="govuk-body">
@@ -30,7 +30,7 @@
             <li>
               <p class="govuk-body">
                 <a href="https://courtstore.justice.gov.uk/courtstore/login?returnUrl=%2Fdashboard" class="govuk-link" rel="noreferrer noopener" target="_blank">
-                  Upload to Court store (opens in new tab)</a>
+                  Upload to Court Store (opens in new tab)</a>
               </p>
             </li>
           </ul>
