Missed a word on the hint text of supporting comments

--- a/app/views/6/verification-report/electronic-monitoring-for-curfew.html
+++ b/app/views/6/verification-report/electronic-monitoring-for-curfew.html
@@ -120,7 +120,7 @@
             <div id="electronic-monitoring-supporting-hint" class="govuk-hint">Include
               information here that supports your professional judgement. 
               <br/>You should include anything of concern that you have considered and how it has affected your recommendation.
-              <br/>This will not be published in the final report but it will recorded.</div>
+              <br/>This will not be published in the final report but it will be recorded.</div>
             <textarea class="govuk-textarea" id="supporting-information-electronic-monitoring" name="supporting-information-electronic-monitoring" rows="5" aria-describedby="supporting-information-electronic-monitoring-hint">{{data['supporting-information-electronic-monitoring']}}</textarea>
           </div>
           <button class="govuk-button" data-module="govuk-button">
