Tidy up some content changes
- service name is now service name as we will name it soon
- routing and form fixed for essential information (was common data)

--- a/app/views/6/verification-report/essential-information.html
+++ b/app/views/6/verification-report/essential-information.html
@@ -76,7 +76,7 @@
     </div>
     <div class="app-split-pane__content">
       <main id="main-content" class="app-content" role="main">
-        <form action="common-data" method="post" novalidate>
+        <form action="essential-information" method="post" novalidate>
           <span class="govuk-caption-l">
             Dylan Adam Armstrong CRN: E234516
           </span>
@@ -97,7 +97,7 @@
                 <div class="govuk-radios__item">
                   <input class="govuk-radios__input" id="domestic-abuse-check-result" name="domestic-abuse-check-result" type="radio" value="No domestic abuse issues" {{ checked("domestic-abuse-check-result", "No domestic abuse issues") }}>
                   <label class="govuk-label govuk-radios__label" for="domestic-abuse-check-result">
-                    No concerns about domestic abuse 
+                    No concerns about domestic abuse
                   </label>
                 </div>
                 <div class="govuk-radios__item">
