--- a/app/views/6/verification-report/offences.html
+++ b/app/views/6/verification-report/offences.html
@@ -78,12 +78,16 @@
             </h2>
             <div id="offences-hint" class="govuk-hint">
               Include a description of the offences and the dates that they were committed.</div>
-            <div class="govuk-form-group">
             <textarea class="govuk-textarea" id="offences" name="offences" rows="5" aria-describedby="offences-hint">{{data['offences']}}</textarea>
           </div>
-          <button class="govuk-button" data-module="govuk-button">
-            Save and continue
-          </button>
+          <div class="govuk-button-group">
+            <button class="govuk-button" data-module="govuk-button">
+              Save and continue
+            </button>
+            <button class="govuk-button govuk-button--secondary" data-module="govuk-button" name="draftSaved" value="true">
+              Save draft
+            </button>
+          </div>
         </form>
       </main>
     </div>
