--- a/app/views/6/verification-report/defendant-details.html
+++ b/app/views/6/verification-report/defendant-details.html
@@ -164,9 +164,14 @@
               </div>
             </fieldset>
           </div>
-          <button class="govuk-button" data-module="govuk-button">
-            Save and continue
-          </button>
+          <div class="govuk-button-group">
+            <button class="govuk-button" data-module="govuk-button">
+              Save and continue
+            </button>
+            <button class="govuk-button govuk-button--secondary" data-module="govuk-button" name="draftSaved" value="true">
+              Save draft
+            </button>
+          </div>
         </form>
       </main>
     </div>
