--- a/app/views/6/verification-report/sign-your-report.html
+++ b/app/views/6/verification-report/sign-your-report.html
@@ -73,9 +73,14 @@
             </h1>
             <input class="govuk-input govuk-input--width-20" id="assessor-name" name="assessor-name" type="assessor-name" value="{{data['assessor-name']}}">
           </div>
-          <button class="govuk-button" data-module="govuk-button">
-            Save and continue
-          </button>
+          <div class="govuk-button-group">
+            <button class="govuk-button" data-module="govuk-button">
+              Save and continue
+            </button>
+            <button class="govuk-button govuk-button--secondary" data-module="govuk-button" name="draftSaved" value="true">
+              Save draft
+            </button>
+          </div>
         </form>
       </main>
     </div>
