--- a/app/views/6/verification-report/electronic-monitoring-for-curfew.html
+++ b/app/views/6/verification-report/electronic-monitoring-for-curfew.html
@@ -16,7 +16,7 @@
                 Offences</a>
             </li>
             <li class="app-subnav__section-item">
-              <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="required-sections">
+              <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="choose-sections">
                 Choose sections</a>
             </li>
             <li class="app-subnav__section-item">
