--- a/app/views/6/verification-report/proposal-error.html
+++ b/app/views/6/verification-report/proposal-error.html
@@ -17,7 +17,7 @@
                 Offences</a>
             </li>
             <li class="app-subnav__section-item">
-              <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="required-sections">
+              <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="choose-sections">
                 Choose sections</a>
             </li>
             <li class="app-subnav__section-item">
@@ -96,7 +96,7 @@
               </label>
             </h2>
             <p id="proposal-error" class="govuk-error-message"><span class="govuk-visually-hidden">
-              Error:</span> You can only select electronic monitoring curfew if you answered: 
+              Error:</span> You can only select electronic monitoring curfew if you answered:
               <ul class="govuk-list govuk-list--bullet govuk-error-message">
                 <li><a href="essential-information">No concerns for domestic abuse</a></li>
                 <li><a href="essential-information">No concerns for child safeguarding</a></li>
