--- a/app/views/6/verification-report/defendant-details.html
+++ b/app/views/6/verification-report/defendant-details.html
@@ -142,7 +142,7 @@
                     <label class="govuk-label govuk-date-input__label" for="date-of-birth-day">
                       Day
                     </label>
-                    <input class="govuk-input govuk-date-input__input govuk-input--width-2" id="date-of-birth-day" name="date-of-birth-day" type="text" inputmode="numeric" value="{{data['date-of-birth-day']}}">
+                    <input class="govuk-input govuk-date-input__input govuk-input--width-2" id="date-of-birth-day" name="date-of-birth-day" type="text" inputmode="numeric" value="{{data['date-of-birth-day'] | default('15')}}">
                   </div>
                 </div>
                 <div class="govuk-date-input__item">
@@ -150,7 +150,7 @@
                     <label class="govuk-label govuk-date-input__label" for="date-of-birth-month">
                       Month
                     </label>
-                    <input class="govuk-input govuk-date-input__input govuk-input--width-2" id="date-of-birth-month" name="date-of-birth-month" type="text" inputmode="numeric" value="{{data['date-of-birth-month']}}">
+                    <input class="govuk-input govuk-date-input__input govuk-input--width-2" id="date-of-birth-month" name="date-of-birth-month" type="text" inputmode="numeric" value="{{data['date-of-birth-month'] | default('03')}}">
                   </div>
                 </div>
                 <div class="govuk-date-input__item">
@@ -158,7 +158,7 @@
                     <label class="govuk-label govuk-date-input__label" for="date-of-birth-year">
                       Year
                     </label>
-                    <input class="govuk-input govuk-date-input__input govuk-input--width-4" id="date-of-birth-year" name="date-of-birth-year" type="text" inputmode="numeric" value="{{data['date-of-birth-year']}}">
+                    <input class="govuk-input govuk-date-input__input govuk-input--width-4" id="date-of-birth-year" name="date-of-birth-year" type="text" inputmode="numeric" value="{{data['date-of-birth-year'] | default('1996')}}">
                   </div>
                 </div>
               </div>
