--- a/app/views/6/verification-report/defendant-details.html
+++ b/app/views/6/verification-report/defendant-details.html
@@ -74,7 +74,7 @@
             <h2 class="govuk-heading-m" for="full-name">
               Full name
             </h2>
-            <input class="govuk-input" id="full-name" name="full-name" type="full-name" value="{{data['full-name'] | default('Dylan Adam Armstrong')}}">
+            <input class="govuk-input govuk-input--width-30" id="full-name" name="full-name" type="full-name" value="{{data['full-name'] | default('Dylan Adam Armstrong')}}">
           </div>
           <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
           <div class="govuk-form-group">
@@ -91,25 +91,25 @@
                 <label class="govuk-label" for="address-line-1">
                   Address line 1
                 </label>
-                <input class="govuk-input" id="address-line-1" name="address-line-1" type="text" autocomplete="off" value="{{data['address-line-1'] | default('19 Penn Street')}}">
+                <input class="govuk-input govuk-input--width-30" id="address-line-1" name="address-line-1" type="text" autocomplete="off" value="{{data['address-line-1'] | default('19 Penn Street')}}">
               </div>
               <div class="govuk-form-group">
                 <label class="govuk-label" for="address-line-2">
                   Address line 2 (optional)
                 </label>
-                <input class="govuk-input" id="address-line-2" name="address-line-2" type="text" autocomplete="off" value="{{data['address-line-2']}}">
+                <input class="govuk-input govuk-input--width-30" id="address-line-2" name="address-line-2" type="text" autocomplete="off" value="{{data['address-line-2']}}">
               </div>
               <div class="govuk-form-group">
                 <label class="govuk-label" for="address-town">
                   Town or city
                 </label>
-                <input class="govuk-input govuk-!-width-two-thirds" id="address-town" name="address-town" autocomplete="off" type="text" value="{{data['address-town'] | default('Oakworth')}}">
+                <input class="govuk-input govuk-input--width-20" id="address-town" name="address-town" autocomplete="off" type="text" value="{{data['address-town'] | default('Oakworth')}}">
               </div>
               <div class="govuk-form-group">
                 <label class="govuk-label" for="address-county">
                   County (optional)
                 </label>
-                <input class="govuk-input govuk-!-width-two-thirds" id="address-county" name="address-county" autocomplete="off" type="text" value="{{data['address-county']}}">
+                <input class="govuk-input govuk-input--width-20" id="address-county" name="address-county" autocomplete="off" type="text" value="{{data['address-county']}}">
               </div>
               <div class="govuk-form-group">
                 <label class="govuk-label" for="address-postcode">
