FIX routing to recommendation error page after name changes

--- a/app/views/6/verification-report/recommendation-error.html
+++ b/app/views/6/verification-report/recommendation-error.html
@@ -82,7 +82,7 @@
             </div>
           </div>
         </div>
-        <form action="proposal" method="post" novalidate>
+        <form action="recommendation" method="post" novalidate>
           <span class="govuk-caption-l">
             Dylan Adam Armstrong CRN: E234516
           </span>
