Defendant address verification does not mention them living there.

--- a/app/views/6/verification-report/defendant-details.html
+++ b/app/views/6/verification-report/defendant-details.html
@@ -120,9 +120,8 @@
             </fieldset>
           </div>
           <div class="govuk-form-group">
-            <h2 class="govuk-heading-m" for="full-name">
-             How have you verified that the defendant is living at this address?
-            </h2>
+            <h2 class="govuk-heading-m" for="full-name">How have you verified
+              this address?</h2>
             <input class="govuk-input" id="address-verification" name="address-verification" type="address-verification" value="{{data['address-verification']}}">
           </div>
           <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
