Offences pre-populated info matches what we can get from NDelius

--- a/app/views/6/verification-report/offences.html
+++ b/app/views/6/verification-report/offences.html
@@ -78,7 +78,7 @@
             </h2>
             <div id="offences-hint" class="govuk-hint">
               Include a description of the offences and the dates that they were committed.</div>
-            <textarea class="govuk-textarea" id="offences" name="offences" rows="5" aria-describedby="offences-hint">{{data['offences'] | default('Theft from a shop. On 24/01/2023 in Townsville, stole 8 cans of cider to the value of £10.50')}}</textarea>
+            <textarea class="govuk-textarea" id="offences" name="offences" rows="5" aria-describedby="offences-hint">{{data['offences'] | default('Theft from a shop 24/08/2023')}}</textarea>
           </div>
           <div class="govuk-button-group">
             <button class="govuk-button" data-module="govuk-button">
