Confirmation page links to report document

--- a/app/views/6/verification-report/confirmation.html
+++ b/app/views/6/verification-report/confirmation.html
@@ -20,7 +20,7 @@
           <p class="govuk-body">It is published to NDelius.</p>
           <h2 class="govuk-heading-m">Next steps</h2>
           <ol class="govuk-list govuk-list--number govuk-!-margin-bottom-9">
-            <li><a href="#" class="govuk-link">Download the report</a></li>
+            <li><a href="download" class="govuk-link">Download the report</a></li>
             <li>Share the report with the court.
               <ul class="govuk-list govuk-list--bullet">
                 <li>
