Fix cancel link on publish report

--- a/app/views/6/verification-report/publish-report.html
+++ b/app/views/6/verification-report/publish-report.html
@@ -76,7 +76,7 @@
             <button class="govuk-button" data-module="govuk-button">
               Publish and lock
             </button>
-            <a class="govuk-link" href="assessor-details">Cancel</a>
+            <a class="govuk-link" href="sign-your-report">Cancel</a>
           </div>
         </form>
       </main>
