--- a/app/views/index.html
+++ b/app/views/index.html
@@ -13,6 +13,10 @@
       <p><a class="govuk-link" href="/6/verification-report/start.html">Prototype</a></p>
       <ul class="govuk-list govuk-list--bullet">
         <li>
+          <p class="govuk-body"><a class="govuk-link" href="https://dsdmoj.atlassian.net/browse/PIC-3323">
+            Fix cancel link bug.</a></p>
+        </li>
+        <li>
           <p class="govuk-body"><a class="govuk-link" href="https://dsdmoj.atlassian.net/browse/PIC-3318">
             Tech spike to see if its possible to make PDF download in the
             prototype kit.</a></p>
