Changed the offence input to single line and added a supplementart information field

--- a/app/views/8/verification-report/defendant-details.html
+++ b/app/views/8/verification-report/defendant-details.html
@@ -125,7 +125,7 @@
           <div class="govuk-form-group">
             <div class="govuk-form-group">
               <label class="govuk-label" for="subject">
-                How have you checked this address?
+                Have you seen proof of address?
               </label>
               <div id="subject-hint" class="govuk-hint">
                 You can enter a proof of address once you have seen one.
