Added hint text to describe the order of tasks

--- a/app/views/8/verification-report/essential-information.html
+++ b/app/views/8/verification-report/essential-information.html
@@ -83,6 +83,7 @@
           <h1 class="govuk-heading-l">
             Essential information
           </h1>
+          <p class="govuk-body">You should request these checks from the relevant agencies and record the results when you have them.<br>You can return to this section at any time.</p>
           <div class="govuk-form-group">
             <fieldset class="govuk-fieldset">
               <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
